# another-labs

./: CMakeLists.txt  main.py
common/: CMakeLists.txt
common/include/common/: matrix.hpp
common/src/: matrix.cpp
input/: lab11.in  lab12.in  lab13.in  lab14.in  lab15.in
lab-1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
lab-2/: 1.cpp  2.cpp
lab-3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
lab-4/: 1.cpp  2.cpp
lab1/: __init__.py  nm_lab11.py  nm_lab12.py  nm_lab13.py  nm_lab14.py  nm_lab15.py
lab2/: __init__.py  nm_lab21.py  nm_lab22.py
lab3/: __init__.py  nm_lab31.py  nm_lab32.py  nm_lab33.py  nm_lab34.py  nm_lab35.py
lab4/: __init__.py  nm_lab41.py  nm_lab42.py
lab5/: nm_lab5.ipynb
lab6/: nm_lab6.ipynb
lab7/: nm_lab7.ipynb
lab8/: nm_lab8.ipynb
labs/: CMakeLists.txt
labs/src/: main.cpp  test.py
output/: lab11.out  lab12.out  lab13.out  lab14.out  lab15.out
