cmake_minimum_required(VERSION 3.20)
project(lb)

set(CMAKE_CXX_STANDARD 23)


add_executable(${PROJECT_NAME}-1-1 lab-1/1.cpp)
add_executable(${PROJECT_NAME}-1-2 lab-1/2.cpp)
add_executable(${PROJECT_NAME}-1-3 lab-1/3.cpp)
add_executable(${PROJECT_NAME}-1-4 lab-1/4.cpp)
add_executable(${PROJECT_NAME}-1-5 lab-1/5.cpp)


add_executable(${PROJECT_NAME}-2-1 lab-2/1.cpp)
add_executable(${PROJECT_NAME}-2-2 lab-2/2.cpp)


add_executable(${PROJECT_NAME}-3-1 lab-3/1.cpp)
add_executable(${PROJECT_NAME}-3-2 lab-3/2.cpp)
add_executable(${PROJECT_NAME}-3-3 lab-3/3.cpp)
add_executable(${PROJECT_NAME}-3-4 lab-3/4.cpp)
add_executable(${PROJECT_NAME}-3-5 lab-3/5.cpp)


add_executable(${PROJECT_NAME}-4-1 lab-4/1.cpp)
add_executable(${PROJECT_NAME}-4-2 lab-4/2.cpp)

